--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazyload": "^3.2.0",
+    "react-loading": "^2.0.3",
     "swr": "^1.0.1"
   },
   "devDependencies": {
